# rivet

./: .gitignore  README.md
.github/workflows/: ios-unsigned-ipa.yml
Rivet_Planning_Package/: 00_READ_ME_FIRST.txt  01_PRODUCT_UI_SPEC.txt  02_IOS_APP_SPEC.txt  03_BACKEND_SPEC.txt  04_AI_CONTEXT_PROMPTING_SPEC.txt  05_SYNC_SECURITY_EDGE_CASES.txt  06_TESTING_LINTING_ACCEPTANCE.txt  07_SIDELOADLY_FOLLOWUP_PLAN.txt  08_UBUNTU_OCI_DEPLOYMENT_SECURITY.txt
backend/: .env.example  Caddyfile  README.md  pyproject.toml  rivet-backend.service
backend/app/: __init__.py  ai.py  cli.py  config.py  database.py  dependencies.py  main.py  models.py  scheduler.py  schemas.py  security.py  services.py
backend/migrations/: README.md
backend/tests/: test_security.py  test_services.py
docs/: api.md  build-ios.md  deployment-status.md  phone-install-status.md  setup-autopersonal-ubuntu-oci.md  setup-autopersonal.md  sideloadly-install.md
ios/Rivet/: Package.swift  project.yml
ios/Rivet/Resources/: Info.plist
ios/Rivet/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Rivet/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Rivet/Sources/RivetApp/: Models.swift  RivetApp.swift  Theme.swift
ios/Rivet/Sources/RivetApp/APIClient/: APIClient.swift
ios/Rivet/Sources/RivetApp/AppRoot/: AppRootView.swift
ios/Rivet/Sources/RivetApp/Calendar/: DayStripView.swift  MonthlyCalendarView.swift
ios/Rivet/Sources/RivetApp/Composer/: ComposerView.swift
ios/Rivet/Tests/RivetTests/: ComposerStateTests.swift  RequestSignerTests.swift
(+11 files in other folders)
