[project]
name = "rivet-backend"
version = "0.1.0"
description = "Rivet private accountability backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "apscheduler>=3.10.4",
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "pynacl>=1.5.0",
  "python-ulid>=3.0.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]

[project.scripts]
rivet-admin = "app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
